fixing facet menu layout on mobile

--- a/dev/atl-output/app/assets/css/app.css
+++ b/dev/atl-output/app/assets/css/app.css
@@ -10464,7 +10464,14 @@ main#image-search {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
-    flex-direction: column; }
+    flex-direction: column;
+    margin-top: -40px; }
+  .image-search-filters ul.subcategory__terms {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    height: auto; }
   .image-search__breadcrumbs {
     margin-left: -1rem;
     margin-top: -1rem;
@@ -10499,6 +10506,15 @@ main#image-search {
     padding-left: .5rem; }
   .image-search__results-viz ul.results-viz__items {
     display: none; } }
+
+@media screen and (min-width: 320px) and (max-width: 812px) and (orientation: landscape) {
+  .image-search-filters ul.image-search__subcategories {
+    padding-bottom: 50px !important; }
+  .image-search-filters ul.subcategory__terms {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; } }
 
 /* tablet */
 @media screen and (min-width: 768px) and (max-width: 1024px) {
